# flux

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  MANIFEST.in  NOTICE  README.md  build.sh  build_nvshmem.sh  build_scm.sh  code-format.sh  gen_version.py  install_deps.sh  launch.sh  pre-commit  pyproject.toml  setup.cfg  setup.py  setup_backup.py  setup_bdist.py  setup_github.py  setup_sdist.py
docs/: FAQ.md  (+7 more)
pynvshmem/: CMakeLists.txt  README.md
pynvshmem/examples/: run.sh  run_example.py
pynvshmem/src/: functions.cpp  module.cpp
pynvshmem/tools/: autogen_pybind.py
src/: .gitignore  CMakeLists.txt
src/a2a_transpose_gemm/: CMakeLists.txt  gemm_v3_post_attn_a2a_transpose_kernel.hpp  post_attn_a2a_transpose_impls.cu  post_attn_a2a_transpose_impls.hpp  sm90_consumer_gemm_tma_warpspecialized_cooperative.hpp
src/ag_gemm/: CMakeLists.txt  all_gather_swizzle.hpp  gemm_v2_ag_kernel.hpp  gemm_v3_ag_kernel.hpp  sm80_all_gather_gemm.hpp  sm80_all_gather_gemm_threadblock_swizzle.hpp  sm80_gemm_universal_with_visitor.hpp  sm89_all_gather_fp8_gemm_threadblock_swizzle.hpp  sm89_all_gather_fp8_gemm_with_absmax.hpp  sm89_gemm_with_absmax.hpp  sm90_all_gather_gemm_tile_scheduler.hpp  sm90_all_gather_gemm_tile_scheduler_stream_k.hpp  sm90_all_gather_gemm_tma_warpspecialized_cooperative.hpp  sm90_all_gather_gemm_tma_warpspecialized_pingpong.hpp  sm90_all_gather_gemm_universal_decl.h
src/all_gather/: CMakeLists.txt  all_gather_swizzle.hpp  gemm_v2_ag_kernel.hpp  gemm_v2_all_gather.hpp  gemm_v3_ag_kernel.hpp  sm80_all_gather_gemm.hpp  sm80_all_gather_gemm_threadblock_swizzle.hpp  sm80_gemm_universal_with_visitor.hpp  sm90_all_gather_gemm_tile_scheduler.hpp  sm90_all_gather_gemm_tma_warpspecialized_cooperative.hpp
src/coll/: CMakeLists.txt  all2all_impl.cu  all2all_impl.hpp  all2all_single_2d_impl.cu  all2all_single_2d_impl.hpp  all_gather_impls.cu  all_gather_impls.hpp  dis_scatter_backward_impl.cu  dis_scatter_backward_impl.hpp  dis_scatter_forward_impl.cu  dis_scatter_forward_impl.hpp  local_copy_and_reset.cu  local_copy_and_reset.hpp
src/comm_none/: CMakeLists.txt  cutlass_blockscale_gemm_impl.cu  cutlass_blockscale_gemm_impl.h  gemm_grouped_v2_comm_none.hpp  gemm_grouped_v3_comm_none.hpp  gemm_v2_comm_none.hpp  gemm_v3_comm_none.hpp
src/cuda/: CMakeLists.txt  bitwise_check.cu  cuda_common.cc  cuda_common.cu  cuda_stub.cc  cudaipc_barrier_all.cu  gemm_op_registry.cu.in  moe_utils.cu  nvml_stub.cc  op_registry.cu  op_registry_proto_utils.cc  random_initialize.cu  utils.cc  version.ld
src/gemm_a2a_transpose/: CMakeLists.txt  gemm_v3_pre_attn_a2a_transpose_kernel.hpp  pre_attn_a2a_transpose_impls.cu  pre_attn_a2a_transpose_impls.hpp  pre_attn_qkv_pack_a2a_impls.cu  pre_attn_qkv_pack_a2a_impls.hpp  sm90_evt.hpp
src/gemm_rs/: CMakeLists.txt  bsr_reduce.cu  bsr_reduce.hpp  epilogue_evt.hpp  epilogue_evt_nvshmem.hpp  epilogue_nvshmem_reduce_scatter.hpp  epilogue_reduce_scatter.hpp  epilogue_vectorized_reduce_scatter.hpp  gemm_v2_reduce_scatter.hpp  gemm_v3_reduce_scatter.hpp  padding_util.cu  padding_util.hpp  reduce_scatter_barrier_struct.hpp  reduce_scatter_kernel.hpp  reduce_scatter_topos.hpp  ring_reduce.cu  ring_reduce.hpp  sm90_epilogue_evt.hpp  sm90_gemm_tma_warpspecialized_cooperative_reduce_scatter.hpp  sm90_gemm_tma_warpspecialized_pingpong_reduce_scatter.hpp  sm90_reduce_scatter_gemm_universal_decl.h  sm90_reduce_scatter_utils.hpp  visitor_2x_bsr.hpp
src/generator/: CMakeLists.txt  gen_a2a_transpose_gemm.cc  gen_ag_gemm.cc  gen_comm_none.cc  gen_gemm_a2a_transpose.cc  gen_gemm_rs.cc  gen_moe_ag_scatter.cc  gen_moe_gather_rs.cc  generator_utils.h
src/inplace_cast/: CMakeLists.txt  inplace_cast.cu  inplace_cast.hpp
src/moe_ag_scatter/: CMakeLists.txt  dispatch_policy.hpp  gather_tensor.hpp  gemm_grouped_v2_ag_scatter.hpp  gemm_grouped_v3_ag_scatter.hpp  scatter_epilogue_array.hpp  sm90_ag_scatter_fetcher.hpp  sm90_gemm_array_warpspecialized_cooperative.hpp  sm90_gemm_array_warpspecialized_pingpong.hpp  sm90_mma_warpspecialized.hpp  sm90_tile_scheduler_group_ag_scatter.hpp  sort_util.cu  sort_util.h  triton_util.cu  triton_util.h  workspace_util.cu  workspace_util.h
src/moe_gather_rs/: CMakeLists.txt  epilogue_gather.hpp  gemm_grouped_gather.hpp  gemm_grouped_gather_rs.hpp  gemm_grouped_gather_store.hpp  gemm_grouped_v2_gather_rs.hpp  gemm_grouped_v3_gather_rs_threadblock_specialized.hpp  moe_utils.cu  moe_utils.h  sm90_gemm_array_threadblock_specialized.hpp  sm90_group_tile_scheduler_threadblock_specialized.hpp  topk_gather_rs.cu  topk_gather_rs.hpp  topk_gather_rs_v2.cu  workspace_helper.cu  workspace_helper.h
src/pybind/: a2a_transpose_gemm.cc  ag_gemm.cc  flux_coll_op.cc  gemm_a2a_transpose.cc  gemm_grouped_v2_ag_scatter.cc  gemm_grouped_v2_gather_rs.cc  gemm_grouped_v3_ag_scatter.cc  gemm_grouped_v3_gather_rs.cc  gemm_only.cc  gemm_rs.cc  inplace_cast.cc  quantization.cc  ths_op.cc
src/quantization/: CMakeLists.txt  quantization.cu  quantization.hpp
src/reduce_scatter/: CMakeLists.txt  bsr_reduce.cu  bsr_reduce.hpp  epilogue_evt.hpp  epilogue_evt_nvshmem.hpp  epilogue_nvshmem_reduce_scatter.hpp  epilogue_reduce_scatter.hpp  epilogue_vectorized_reduce_scatter.hpp  gemm_v2_reduce_scatter.hpp  gemm_v3_reduce_scatter.hpp  gemmk_universal_with_visitor.hpp  gemmk_universal_with_visitor_streamk.h  gemmk_visitor_load.hpp  reduce_scatter_barrier_struct.hpp  reduce_scatter_kernel.hpp  reduce_scatter_topos.hpp  sm90_epilogue_evt.hpp  sm90_gemm_tma_warpspecialized_cooperative_reduce_scatter.hpp  sm90_reduce_scatter_utils.hpp  visitor_2x_bsr.hpp
src/ths_op/: CMakeLists.txt  flux_shm.cc  helper_ops.cc  nvshmem_utils.cc  ths_op.cc  topo_utils.cc
test/unit/: CMakeLists.txt  copy_d2d_cute_perf.cu  copy_d2d_perf.cu  copy_d2h_perf.cu  copy_perf_utils.hpp  cuda_utils.hpp  inplace_cast.cu  numa_helper.hpp  reduce_scatter_kernel_perf.cu  test_cuda_common.cu  test_cute.cc  test_flux_templates.cc  test_globaltimer.cu  test_memory_bound.cc  test_pingpong_latency.cu  test_tma_copy.cu  test_topo_utils.cc  test_tuning.cc  test_vectorized_copy.cu  utils.hpp
(+324 files in other folders)
